tests/fixtures/invalid/str_mod_str.py
# Cannot modulo Str and Str
x: str = "hello" % "hello"
